--- a/Dude-Money/Storyboards/Base.lproj/Main.storyboard
+++ b/Dude-Money/Storyboards/Base.lproj/Main.storyboard
@@ -28,17 +28,58 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="summaryCell" id="b3v-9V-pH8" customClass="SummaryCollectionViewCell" customModule="Dude_Money" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="414" height="174"/>
+                                        <rect key="frame" x="0.0" y="50" width="414" height="210"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="s79-wf-f1x">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="174"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="210"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bakiyeniz" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fLs-Mi-BH1">
+                                                    <rect key="frame" x="175" y="20" width="64.5" height="17"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0₺" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TcQ-dJ-BcL">
+                                                    <rect key="frame" x="188" y="45" width="38.5" height="37"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                                    <color key="textColor" systemColor="systemGreenColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="IV1-5m-6qw">
+                                                    <rect key="frame" x="248.5" y="169.5" width="145.5" height="20.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bakiyemi Yönet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dzi-vC-dge">
+                                                            <rect key="frame" x="0.0" y="0.0" width="116" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow.forward" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="2Ge-53-WBg">
+                                                            <rect key="frame" x="126" y="2.5" width="19.5" height="15.5"/>
+                                                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <constraints>
+                                                <constraint firstItem="TcQ-dJ-BcL" firstAttribute="top" secondItem="fLs-Mi-BH1" secondAttribute="bottom" constant="8" symbolic="YES" id="aSm-fL-YU5"/>
+                                                <constraint firstItem="fLs-Mi-BH1" firstAttribute="centerX" secondItem="s79-wf-f1x" secondAttribute="centerX" id="bXi-Pi-lec"/>
+                                                <constraint firstAttribute="bottom" secondItem="IV1-5m-6qw" secondAttribute="bottom" constant="20" symbolic="YES" id="ixf-8y-F5k"/>
+                                                <constraint firstAttribute="trailing" secondItem="IV1-5m-6qw" secondAttribute="trailing" constant="20" symbolic="YES" id="lyn-u9-mKJ"/>
+                                                <constraint firstItem="IV1-5m-6qw" firstAttribute="leading" relation="lessThanOrEqual" secondItem="s79-wf-f1x" secondAttribute="leading" constant="379" id="pk9-mf-Veh"/>
+                                                <constraint firstItem="fLs-Mi-BH1" firstAttribute="top" secondItem="s79-wf-f1x" secondAttribute="top" constant="20" symbolic="YES" id="vcu-GE-zxB"/>
+                                                <constraint firstItem="TcQ-dJ-BcL" firstAttribute="centerX" secondItem="s79-wf-f1x" secondAttribute="centerX" id="xAL-aM-6Ar"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
-                                        <size key="customSize" width="414" height="174"/>
+                                        <size key="customSize" width="414" height="210"/>
+                                        <connections>
+                                            <outlet property="amountLabel" destination="TcQ-dJ-BcL" id="VMC-Zy-fqs"/>
+                                        </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="billCell" id="OFy-IM-G2Q" customClass="BillCollectionViewCell" customModule="Dude_Money" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="234" width="414" height="70"/>
+                                        <rect key="frame" x="0.0" y="270" width="414" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GfR-al-iPo">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
@@ -52,13 +93,13 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ehK-oH-ryf">
-                                                    <rect key="frame" x="365" y="28" width="29" height="14"/>
+                                                    <rect key="frame" x="365.5" y="28.5" width="28.5" height="13.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3cb-f4-1qI">
-                                                    <rect key="frame" x="63" y="28" width="29" height="14"/>
+                                                    <rect key="frame" x="63" y="28.5" width="28.5" height="13.5"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -88,7 +129,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kzz-Gu-IbE">
-                                            <rect key="frame" x="20" y="14.5" width="42" height="21"/>
+                                            <rect key="frame" x="20" y="15" width="41.5" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" systemColor="secondaryLabelColor"/>
                                             <nil key="highlightedColor"/>
@@ -120,15 +161,19 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bEo-OY-8yB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1343" y="-479"/>
+            <point key="canvasLocation" x="-1343.4782608695652" y="-479.46428571428567"/>
         </scene>
     </scenes>
     <resources>
+        <image name="arrow.forward" catalog="system" width="128" height="98"/>
         <systemColor name="secondaryLabelColor">
             <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
